# ChangeLog for dev-python/pytables
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pytables/ChangeLog,v 1.2 2004/02/16 20:49:17 mr_bones_ Exp $

  16 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org> pytables-0.7.2.ebuild:
  don't set S to default; repoman: Fix leading whitespace

*pytables-0.7.2 (15 Feb 2004)

  15 Feb 2004; <kloeri@gentoo.org> pytables-0.7.2.ebuild:
  Initial import.
