@@ -1,4 +1,6 @@
-MD5 76194fc9ba63c1f14a4ae8fcfcf09006 ChangeLog 468
-MD5 71c4638c9c88af75b58e5f5cb54fe008 metadata.xml 159
+MD5 fa785c6e18e9db48dac5d0050bcd4d2b ChangeLog 567
+MD5 ef021abd0be7fc25aa979cf25d501998 pytables-0.8.ebuild 523
 MD5 85e2cad9a0aae1bc4ef9190494cc4096 pytables-0.7.2.ebuild 528
+MD5 71c4638c9c88af75b58e5f5cb54fe008 metadata.xml 159
 MD5 215625681422b404c7b499e6ec664314 files/digest-pytables-0.7.2 66
+MD5 ce105875d1c8066cfaee8b302c563c03 files/digest-pytables-0.8 65
