@@ -1,0 +1,1 @@
+MD5 20e6709d1bf29143ac7766479e48a8f4 pytables-0.8.tar.gz 1878023
